[v8r8-pre4]
use DIRAC v6r17p20
* change the lcgBundle

[v8r8-pre3]
use DIRAC v6r17p20

* allow to change the step for a given production
* event type has to be number
* add visibility flag to the primary key
* schama changed

[v8r8-pre2]
use DIRAC v6r17p19
* use m2crypto
* use LCG 88

[v8r8-pre1]
use DIRAC v6r17p19
* remove fake name
* Change CMTCONFIG value
* default json file
* rename projectConfig.json
* change filename
* change logic for the config tools
* add qt5 toprepare the migration of the Bookkeeping GUI
* add case for gcc48
* add event type to the productionoutputfiles and correctly fill the tables
* use the productionoutputfiles table for storing the event types
* use the environment variable
* setup Bookkeeping jenkins tests
* adapting integration tests to new outputVisibilityFlag of steps
* simple fixes for log and output
* fixed tests for using outVisibilityFlag

[v8r8-pre0]
use DIRAC v6r17p19
* Use LHCbGrid v11r6
* Fixes according to comments by Federico (see MR https://gitlab.cern.ch/lhcb-dirac/LHCbDIRAC/merge_requests/306)
* typo fix
* added new test files
* minor pylints
* Fix empty array issues (Vladimir's patch)
* Fix typo in MC template
* using -c best option of lbRun
* Enable Gitlab-ci to build the LHCbDIRAC tarball, deploy it on AFS and build the docker image for each tag in the repository
* Bind compression level to output file visibility in MC template
* Fix some typos
* Rolled back to dictionaries for the vis flag (ProdRequest)
* Rolled back to dictionaries for the vis flag, as it's less error prone
* Force compression level for MC when output file visibility is Y
* Add EventType information to bkk
* Add modifications to templates to manage visibility flags of putput files
* Fixed logic in resolveStep
* Added tests, found a bug in the logic of assigning vis to special ftype
* Create the list of dictionaries needed by the BKK schema for the visibility of output files