@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8-pre5
+  {
+    Modules = LHCbDIRAC:v8r8-pre5, LHCbWebDIRAC:v4r3p2
+    Depends = DIRAC:v6r17p20
+    LcgVer = 2017-05-18
+  }
+
   v8r8-pre4
   {
     Modules = LHCbDIRAC:v8r8-pre4, LHCbWebDIRAC:v4r3p2
